--- a/templates/facture/index.html.twig
+++ b/templates/facture/index.html.twig
@@ -17,9 +17,8 @@
 <br/><br/>
 <fieldset>
 <legend>Contenu de la facture *</legend>
-<ul class="prestation">
-        {# iterate over each existing tag and render its only field: name #}
-        {% for presta in form.prestation %}
+<ul class="prestation data-prototype="{{ form_widget(form.prestations.vars.prototype)|e }}">
+        {% for presta in form.prestations %}
             <li>{{ form_row(presta.designation) }}</li>
             <li>{{ form_row(presta.quantite) }}</li>
             <li>{{ form_row(presta.prixht) }}</li>
@@ -27,10 +26,69 @@
         {% endfor %}
 </ul>
 
-{{ form_row(form.button) }}
 </fieldset>
 
 <button type="submit" class ="btn-primary btn-block">Créer une facture</button>
 {{ form_end(form) }}
 </section>
+<br/><br/>
+
+{% block javascripts %}
+<script>
+var $collectionHolder;
+
+// setup an "add a prestation" link
+var $addPrestationLink = $('<a href="#" class="add_prestation_link">Add a prestation</a>');
+var $newLinkLi = $('<li></li>').append($addPrestationLink);
+
+jQuery(document).ready(function() {
+    // Get the ul that holds the collection of prestations
+    $collectionHolder = $('ul.prestations');
+
+    // add a delete link to all of the existing prestation form li elements
+    $collectionHolder.find('li').each(function() {
+        addPrestationFormDeleteLink($(this));
+    });
+
+    // add the "add a prestation" anchor and li to the prestations ul
+    $collectionHolder.append($newLinkLi);
+
+    // count the current form inputs we have (e.g. 2), use that as the new
+    // index when inserting a new item (e.g. 2)
+    $collectionHolder.data('index', $collectionHolder.find(':input').length);
+
+    $addprestationLink.on('click', function(e) {
+        // prevent the link from creating a "#" on the URL
+        e.preventDefault();
+
+        // add a new prestation form (see next code block)
+        addPrestationForm($collectionHolder, $newLinkLi);
+    });
+});
+
+function addPrestationForm($collectionHolder, $newLinkLi) {
+    // Get the data-prototype explained earlier
+    var prototype = $collectionHolder.data('prototype');
+
+    // get the new index
+    var index = $collectionHolder.data('index');
+
+    // Replace '__name__' in the prototype's HTML to
+    // instead be a number based on how many items we have
+    var newForm = prototype.replace(/__name__/g, index);
+
+    // increase the index with one for the next item
+    $collectionHolder.data('index', index + 1);
+
+    // Display the form in the page in an li, before the "Add a prestation" link li
+    var $newFormLi = $('<li></li>').append(newForm);
+    $newLinkLi.before($newFormLi);
+
+    // add a delete link to the new form
+   addPrestationFormDeleteLink($newFormLi);
+}
+   </script>
+   <script src="{{ asset('js/jquery.js') }}"></script>
+{% endblock %}
+
 {% endblock %}
